# planloop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/cases/: planloop-12.json
benchmarks/results/: example-results.json
docs/: benchmark.md  usage.md
examples/: demo.md  final-plan.md
scripts/: install-claude-skill  planloop  planloop-benchmark
skills/planloop/: SKILL.md
skills/planloop/agents/: openai.yaml
skills/planloop/references/: moderator_discovery.md  packet_templates.md  prd_template.md
src/planloop/: benchmark.py  cli.py  runner.py
tests/: test_benchmark.py  test_claude_install.py  test_runner.py  test_skill_package.py
